fix: protocol and vendor packages

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "php-ai/php-ml": "^0.10.0",
         "treinetic/imageartist": "^1.0",
         "ddeboer/imap": "^1.19",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "simplito/elliptic-php": "^1.0"
     }
 }
